--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@ overflow: hidden;
         </div>
         
         <div class="hero-content">
-            <div class="hero-text"><br><br>
+            <div class="hero-text"><br><br><br>
                 <h1>Wo Träume tanzen lernen</h1>
                 <p class="hero-subtitle">Eleganz • Anmut • Perfektion</p>
                 <p class="hero-description">
