--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ballettstudio Ost Frankfurt - Eleganz in Bewegung</title>
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://ballett-frankfurt.statichost.eu/">
+    <meta name="google-site-verification" content="DTA8yg-hykkhOxLz0JbB2nxjsyJGOZHI8e2BoTxIkN8" />
     <meta name="description" content="Ballettstudio Ost Frankfurt - Wo Träume tanzen lernen. Klassischer Ballettunterricht nach Waganowa-Methode für alle Altersgruppen. Jetzt Schnupperstunde vereinbaren!">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap');
