--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
         <div class="sparkles-container" id="sparkles"></div>
         
         <div class="hero-content">
-            <div class="hero-text"><br><br><br>
+            <div class="hero-text"><br><br>
                 <h1>Wo Träume <span class="dancing-word">tanzen</span> lernen</h1>
                 <p class="hero-subtitle">Eleganz • Anmut • Perfektion</p>
                 <p class="hero-description">
@@ -863,7 +863,7 @@
                 </p>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn btn-primary">Jetzt Probestunde buchen</a>
-                </div>
+                </div><br><br>
             </div>
         </div>
     </section>
