--- a/index.html
+++ b/index.html
@@ -853,17 +853,17 @@
         <div class="sparkles-container" id="sparkles"></div>
         
         <div class="hero-content">
-            <div class="hero-text"><br><br>
+            <div class="hero-text"><br><br><br>
                 <h1>Wo Träume <span class="dancing-word">tanzen</span> lernen</h1>
                 <p class="hero-subtitle">Eleganz • Anmut • Perfektion</p>
                 <p class="hero-description">
-                    Entdecke die Welt des klassischen Balletts in unserem Studio im Herzen Frankfurts. 
+                    Entdecke die Welt des klassischen Balletts. 
                     Hier verwandeln wir Leidenschaft in Kunst und begleiten dich auf deiner tänzerischen Reise 
                     - von den ersten zarten Schritten bis zur vollendeten Darbietung.
                 </p>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn btn-primary">Jetzt Probestunde buchen</a>
-                </div><br><br>
+                </div><br>
             </div>
         </div>
     </section>
