--- a/index.html
+++ b/index.html
@@ -882,9 +882,9 @@
     <section id="features" class="features">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Warum Ballett lernen bei uns?</h2>
+                <h2 class="section-title">Warum unsere Ballettschule?</h2>
                 <p class="section-subtitle">
-                    Entdecke, warum unser Studio der perfekte Ort für deine Ballettausbildung ist
+                    Entdecke, warum das Ballettstudio Ost der perfekte Ort für deine Ballettausbildung ist
                 </p>
             </div>
             
