--- a/index.html
+++ b/index.html
@@ -1038,8 +1038,8 @@
     <section id="location" class="location">
         <div class="container">
             <div class="location-content">
-                <h2 class="section-title">Mitten im Leben, mitten in Frankfurt</h2>
-                <p class="section-subtitle">Direkt am Osthafenplatz gelegen, erreichst du uns mühelos:</p>
+                <h2 style="text-align:left;">Mitten im Leben, mitten in Frankfurt</h2>
+                <p class="section-subtitle" style="text-align:left;">Direkt am Osthafenplatz gelegen, erreichst du uns mühelos:</p>
             </div>
             
             <div class="location-grid">
