--- a/index.html
+++ b/index.html
@@ -882,8 +882,8 @@
     <section id="features" class="features">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Warum unsere Ballettschule?</h2>
-                <p class="section-subtitle">
+                <h2 class="section-title" style="text-align:left;">Warum unsere Ballettschule?</h2>
+                <p class="section-subtitle" style="text-align:left;">
                     Entdecke, warum das Ballettstudio Ost der perfekte Ort für deine Ballettausbildung ist
                 </p>
             </div>
