--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@
     <section class="testimonials">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title" style="color: white;">Was unsere Schüler und Eltern sagen</h2>
+                <h2 class="section-title" style="text-align:left; color: white;">Was unsere Schüler und Eltern sagen</h2>
             </div>
 <div class="rating-showcase">
 <h3 style="color: black;">Juan Carlos R.</h3>
