--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@
 </i></p><a href="https://www.google.com/maps/reviews/@50.1113189,8.713431,17z/data=!3m1!4b1!4m6!14m5!1m4!2m3!1sChdDSUhNMG9nS0VJQ0FnSURGdTktY2hnRRAB!2m1!1s0x0:0xb2d79e105704851c?hl=de&entry=ttu"  target="_blank" rel="noopener noreferrer" class="rating-link" style="color: black;">Zur Bewertung</a></div><br><br>
             
             <div class="rating-showcase" style="color: black;">
-                <div class="stars">⭐⭐⭐⭐⭐</div>
+                <div class="stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
                 <div class="rating-text">Ausgezeichnet bewertet</div>
                 <p style="margin-bottom: 1rem; opacity: 0.9;">5.0 von 5 Sternen bei Google</p>
                 <a href="https://maps.app.goo.gl/1CH7AYbDXkGAxZYy8" target="_blank" rel="noopener noreferrer" class="rating-link" style="color: black;">
@@ -1107,7 +1107,7 @@
                     <div class="contact-item">
                         <span class="contact-icon"><i class="bi bi-geo-alt"></i></span>
                         <div class="contact-details">
-                            <strong>Unser Studio</strong>
+                            <strong>Ballettstudio Ost</strong>
                             Hanauer Landstraße 138<br>
                             60314 Frankfurt am Main
                         </div>
