--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="canonical" href="https://ballett-frankfurt.statichost.eu/">
     <meta name="google-site-verification" content="DTA8yg-hykkhOxLz0JbB2nxjsyJGOZHI8e2BoTxIkN8" />
     <meta name="description" content="Ballettstudio Ost Frankfurt - Wo Träume tanzen lernen. Klassischer Ballettunterricht nach Waganowa-Methode für alle Altersgruppen. Jetzt Schnupperstunde vereinbaren!">
+    <link rel="icon" href="https://www.ballettstudio-ost.de/icons/safari-pinned-tab.svg">
+    <link rel="mask-icon" href="https://www.ballettstudio-ost.de/icons/safari-pinned-tab.svg" color="#000000">
+    <link rel="apple-touch-icon" href="https://www.ballettstudio-ost.de/icons/apple-touch-icon.png">
+    <link rel="manifest" href="https://www.ballettstudio-ost.de/icons/manifest.json">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap');
 
@@ -1112,7 +1116,7 @@
         <div class="container">
             <div class="contact-grid">
                 <div class="contact-info">
-                    <h2>Lass uns ins Gespräch kommen</h2>
+                    <h2>Komm vorbei und tanze mit uns</h2>
                     
                     <div class="contact-item">
                         <span class="contact-icon"><i class="bi bi-geo-alt"></i></span>
