--- a/index.html
+++ b/index.html
@@ -1116,7 +1116,7 @@
         <div class="container">
             <div class="contact-grid">
                 <div class="contact-info">
-                    <h2>Komm vorbei und tanze mit uns</h2>
+                    <h2>Melde dich bei uns</h2>
                     
                     <div class="contact-item">
                         <span class="contact-icon"><i class="bi bi-geo-alt"></i></span>
