--- a/index.html
+++ b/index.html
@@ -897,9 +897,9 @@
     <section id="features" class="features">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title" style="text-align:left;">Warum unsere Ballettschule?</h2>
+                <h2 class="section-title" style="text-align:left;">Deine Vorteile bei uns</h2>
                 <p class="section-subtitle" style="text-align:left;">
-                    Entdecke, warum das Ballettstudio Ost der perfekte Ort für deine Ballettausbildung ist
+                    So unterstützt dich unsere Schule auf deinem Weg
                 </p>
             </div>
             
