--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
                 <h1>Wo Träume <span class="dancing-word">tanzen</span> lernen</h1>
                 <p class="hero-subtitle">Eleganz • Anmut • Perfektion</p>
                 <p class="hero-description">
-                    Entdecke die Welt des klassischen Balletts in unserem Studio im Herzen Frankfurts. 
+                    Entdecke die Welt des klassischen Balletts im Ballettstudio Ost im Herzen Frankfurts. 
                     Hier verwandeln wir Leidenschaft in Kunst und begleiten dich auf deiner tänzerischen Reise 
                     - von den ersten zarten Schritten bis zur vollendeten Darbietung.
                 </p>
