--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ballettstudio Ost Frankfurt - Eleganz in Bewegung</title>
+    <title>Ballettstudio Ost, Frankfurt - Eleganz in Bewegung</title>
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://ballett-frankfurt.statichost.eu/">
     <meta name="google-site-verification" content="DTA8yg-hykkhOxLz0JbB2nxjsyJGOZHI8e2BoTxIkN8" />
