--- a/index.html
+++ b/index.html
@@ -355,14 +355,17 @@
             animation: fadeInUp 1s ease-out 0.2s both;
         }
 
-        .hero-description {
-            font-size: clamp(1.3rem, 4vw, 1.5rem);
-            color: rgba(255, 255, 255, 0.95);
-            margin-bottom: 3rem;
-            line-height: 1.6;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-            animation: fadeInUp 1s ease-out 0.4s both;
-        }
+.hero-description {
+  font-size: clamp(1.3rem, 4vw, 1.5rem);
+  color: rgba(255, 255, 255, 0.95);
+  margin-bottom: 3rem;
+  line-height: 1.6;
+  font-weight: 500;
+  max-width: 60ch;
+  letter-spacing: 0.5px;
+  text-shadow: 0 4px 10px rgba(0,0,0,0.6);
+  animation: fadeInUp 1s ease-out 0.4s both;
+}
 
         .hero-buttons {
             display: flex;
